--- a/CoreServer.Api/appsettings.json
+++ b/CoreServer.Api/appsettings.json
@@ -10,7 +10,7 @@
   "Databases": [
     {
       "DbName": "MySql",
-      "ConnectionString": ""
+      "ConnectionString": "server=localhost;port=3306;user=rjdemo;database=emr;password=123;"
     },
     {
       "DbName": "SqlServer",
