--- a/CoreServer.Entity/CoreServer.Entity.csproj
+++ b/CoreServer.Entity/CoreServer.Entity.csproj
@@ -4,4 +4,16 @@
         <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="sqlSugarCore" Version="5.0.0.11" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CoreServer.Common\CoreServer.Common.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="SqliteDb" />
+    </ItemGroup>
+
 </Project>
