--- a/MicroService/CoreServer.Api/appsettings.json
+++ b/MicroService/CoreServer.Api/appsettings.json
@@ -16,5 +16,9 @@
       "DbName": "SqlServer",
       "ConnectionString": ""
     }
-  ]
+  ],
+  "CapConfig": {
+    "Storage": "",
+    "Transport": ""
+  }
 }
